--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.grid {
+.app-wrapper {
     display: grid;
     width: 1200px;
     margin: 0 auto;
@@ -7,31 +7,7 @@
             "header header"
             "nav content";
     grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
 
-}
-.header {
-    grid-area: header;
-    background-color: lawngreen;
-}
-.headerimg {
-    width: 100px;
-    height: 60px;
-}
-.sidebar {
-    grid-area: nav;
-    background-color: aquamarine;
-}
-.content {
-    grid-area: content;
-    background-color: beige;
-}
-.MainP{
-    width: 1000px;
-    height: 200px;
-}
-.Ava {
-    width: 150px;
-    height: 150px;
 }
