add Routing(app.js,NavBar.js), also add some empty pages

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,12 @@
             "header header"
             "nav content";
     grid-template-rows: 60px 1fr;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 5fr;
     grid-gap: 10px;
+
+}
+.app-wrapper-content {
+    grid-area: content;
+    background-color: beige;
 
 }
