some updates to Dialogs.js and Profile.js.

--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -3,10 +3,6 @@
     width: 1000px;
     height: 200px;
 }
-.Ava {
-    width: 150px;
-    height: 150px;
-}
-.item {
-    color: blue;
+.content{
+
 }
