--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,10 +1,18 @@
 .header {
+    display: grid;
     grid-area: header;
     background-color: lawngreen;
-    grid-column: 1/3;
-    grid-row: 1/1;
+
+    grid-template-columns: 1fr 2fr;
 }
 .headerimg {
     width: 100px;
     height: 60px;
 }
+.idinahuy{
+    color: red;
+    font-size: 30px;
+    padding: 10px;
+    font-weight: bold;
+}
+
