--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -5,7 +5,6 @@
 }
 
 .dialogs {
-    color: darkred;
     padding: 10px;
 }
 .dialog {
@@ -16,7 +15,7 @@
 }
 
 .messages{
-    color: darkred;
+    color: #942A1C;
     padding: 10px;
 }
 .message {
