--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     display: grid;
     grid-area: header;
-    background-color: lawngreen;
+    background-color: #63E0B7;
 
     grid-template-columns: 1fr 2fr;
 }
@@ -9,8 +9,8 @@
     width: 100px;
     height: 60px;
 }
-.idinahuy{
-    color: red;
+.mainw{
+    color: #943A23;
     font-size: 30px;
     padding: 10px;
     font-weight: bold;
