--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -2,6 +2,7 @@
     display: grid;
 
     grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
+
 }
 
 .dialogs {
@@ -37,5 +38,29 @@
 .message {
 
 }
+.enter{
+    padding: 20px;
+    grid-column: 1/3;
 
+}
+.enteringbutton{
+    width: 200px;
+    height: 50px;
+    color:#942A1C;
+    font-weight: bold;
+    background: white;
+    text-align: center;
+
+}
+
+.enteringarea {
+    width: 800px;
+    height: 100px;
+    font-size: 16px;
+    color: #942A1C;
+    background: #63E0B7;
+    font-weight: bold;
+    text-align: right;
+
+}
 
