--- a/src/Components/Profile/MyPost/MyPost.module.css
+++ b/src/Components/Profile/MyPost/MyPost.module.css
@@ -1,9 +1,36 @@
 .item {
     color: #942A1C;
+    text-align: center;
 }
 .posts {
     margin-top: 10px;
 }
 .content{
     padding: 20px;
+}
+.removebutton{
+    margin-left: 710px;
+    width: 100px;
+    height: 50px;
+    color:#942A1C;
+    font-weight: bold;
+
+}
+
+.addbutton{
+    width: 100px;
+    height: 50px;
+    color:#942A1C;
+    font-weight: bold;
+
+}
+
+.postcontent {
+    width: 900px;
+    height: 200px;
+    font-size: 16px;
+    color:#942A1C;
+    background: #63E0B7;
+    font-weight: bold;
+
 }
